--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyC4DGfiGvMmXUUpMJ7GrKXLt1BX8PyZIdI" />
         <activity
             android:name=".WriteNewDiaryActivity"
             android:exported="false" />
